@@ -1,4 +1,8 @@
 2004-06-14 Magnus Hagdorn
+ * rename false_westing to false_easting
+   (CF_proj.py, add_projinfo.py, create_topo.py)
+
+2004-06-14 Magnus Hagdorn
  * added colour maps
 	
 2004-06-14 Magnus Hagdorn
